syntax = "proto3";

package ru.otus.protobuf;

option java_multiple_files = true;

message SequenceMessage {
    int64 firstValue = 1;
    int64 currentValue = 2;
    int64 lastValue = 3;
}

service SequenceService  {
    rpc runSequence(SequenceMessage) returns (stream SequenceMessage) {};
}